prerelease: 1.0.0-beta.2
安全
- XXE 漏洞：移除全部 XML 解析（MetroData/MusicManager），改用 Gson 解析 JSON，从根本上消除外部实体攻击面。
- 远程播放列表仅允许 http/https 协议，拒绝 file:// 等自定义协议。
- 远程请求加 4s 连接/读取超时，避免网络卡死冻结游戏；列表通过 `loadPlaylistAsync()` 后台加载。
- `openFolder` 用 ProcessBuilder 参数列表，避免命令注入。

修复
- `/gunfumetro config gui` 与 `/gunfumetro map gui` 打开后立即关闭、命令不生效的问题（打开后延迟重设屏幕）。
- `MetroData.loadAll()` 首次加载后直接返回导致 reload 命令空操作 → 提供 `reload()`，命令全部改用它；加载成功后原子替换为不可变快照，失败保留旧数据。
- A003 站位坐标格式错误 → 数据已修复为结构化 `{x,y,z}` 点位，JSON 不再有历史 6 值字符串格式问题。
- min/max 坐标轴颠倒（如 A001 的 Y 范围）→ 解析时统一规范化。
- JSON 畸形数据不会崩溃：Gson 解析异常被捕获并记日志，保留旧数据。
- 地图四周预留 10% 空白边距的计算方式，避免边距被重复累加；`worldW/H` 为 0/Inf/NaN 时有保护，避免除零。
- `parseColor` 非法颜色有异常保护。
- `/gunfumetro config reload / reset` 命令不生效：根因是 YACL `load()` 会替换实例对象导致依赖同一引用的读取方获取不到新值。新增 `applyFrom`/`resetToDefaults`/`reloadFromDisk` 原地修改实例；reset 补齐遗漏的 `musicRemoteUrl` 字段；文件不存在时提示并保留当前配置。
- 最近站点距离计算误差：由到 AABB 包围盒的距离改为到最近出入口的真实三维直线距离（无出入口时以站中心为准）。
- F1 隐藏 HUD 界面时，模组 HUD 仍显示的问题。
- 音乐播放失败时无提示的问题：空歌单、文件不存在等均给出明确反馈。

功能
- 线路 route 路径绘制：`lines.json` 每条线路新增 route（`{x,y,z}` 点序列），A2 按数据填入全部 48 点（修正笔误 -666,90.2552）；线路有 ≥2 个路径点时按顺序连线绘制（忽略 Y 轴），无路径时回退为按 connections 连接站点；地图边界计算纳入路径点防止被裁剪。
- 纹理分辨率改为 1 像素 = 1 MC 方块（坐标）的 1:1 生成，解除宽度 = 窗口宽度的限制，宽高均按世界尺寸计算，任一维度超 2048 自动横向/纵向裁切。
- 新增香港繁体（zh_hk）语言文件，支持 zh_hk / zh_tw / zhhant 繁中显示；站点与线路新增 `zh-Hant` 名称字段，繁体中文环境下自动优先显示繁中名称。
- 新增 `GunfuMetroConfigScreen`（YACL 配置界面），由 `/gunfumetro config gui` 打开。
- 地图导出图片新增站点名称标注，按当前游戏语言显示（简中/繁中/英文），并自动选用支持中日韩字符的字体。
- 新增 `getLastError()` / `getPlaylistSize()`，用于命令层反馈播放失败原因与列表大小。
- 最近站点 HUD 改为三行布局：站点名 / 出口名称 / 距离（米）；站内时显示「在〈站点名〉内」。

性能
- 地图纹理逐像素转换由取模/除法改为嵌套循环；`getRGB` 批量取像素一次到位。
- HUD 最近站点改用平方距离比较、仅最后开一次根号。
- `MetroMapScreen.render()` 删除逐帧日志，站点列表在 `init()` 预计算。
- `MusicManager.playlist` 改为 volatile 不可变快照，HUD 线程无锁读取，消除 clear/addAll 半加载竞态。
- `playNext`/`playPrevious` 复用同一 Random 并避免随机到当前曲目；删除未使用 `formatTime`，tick 事件已合并。

日志 / 清理
- 全部 `System.out.println` / `printStackTrace` → SLF4J Logger。
- 移除命令里「200ms 后重设屏幕」的 hack 线程（改为延迟重设的兜底方案）。
- 配置界面统